# 2d-packing-optimization

./: README.md  config.py  image_arrangement.py  logger.py  main.py  pyproject.toml  solve_problem_full_size_log.txt  solve_problem_log.txt  utils.py
